# grpc-Tic-Tac-Toe

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
client/: CMakeLists.txt  Makefile  main.cpp
client/include/: client.cpp  client.hpp  game_service.grpc.pb.cc  game_service.pb.cc  game_service.pb.h
client/src/: client.cpp
protos/: Makefile  game_service.proto
protos/include/: game_service.grpc.pb.cc  game_service.grpc.pb.h  game_service.pb.cc  game_service.pb.h
server/: CMakeLists.txt  Makefile  main.cpp
server/include/: game_service.grpc.pb.h  game_service.pb.cc  game_service.pb.h  server.cpp  server.hpp
server/src/: server.cpp
